--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -33,10 +33,10 @@ const {
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
 
-    <!-- Google Fonts - Inter -->
+    <!-- Google Fonts - Inter, Nunito, Raleway -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Nunito:wght@700;800;900&family=Raleway:wght@700;800;900&display=swap" rel="stylesheet" />
 
     <title>{title}</title>
   </head>
