--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Navbar from '../components/Navbar.astro';
 import Hero from '../components/Hero.astro';
 import ProblemStatement from '../components/ProblemStatement.astro';
 import Features from '../components/Features.astro';
+import ProductShowcase from '../components/ProductShowcase.astro';
 import CTASection from '../components/CTASection.astro';
 import HowItWorks from '../components/HowItWorks.astro';
 import SocialProof from '../components/SocialProof.astro';
@@ -20,6 +21,7 @@ import Footer from '../components/Footer.astro';
   <Hero />
   <ProblemStatement />
   <Features />
+  <ProductShowcase />
   <CTASection />
   <HowItWorks />
   <SocialProof />
